src/css/grabpress.css
/* ... */
#id_tos{
	text-align: right;
	font-size: 10px;
}
#cancel-editing{
	font-size: 12px;
    float: right;
}
#reset-form{
    float: right;
    margin: 0 15px 0 10px;
}
#acknowledge #confirm{
	margin-left: 10px;
}
.hide-button{ display: none !important;}
.manage-table .editing-feed td{
	background-color: #c41500 !important;
	color: white !important
}
.grabpress-table .preview-btn-text{ float: right; }
.grabpress-table .asterisk{ font-size: 16px; }
.grabpress-table th{ width: 130px }
#create-form,
.edit-form-text,
#manage-table {
	width: 850px;
}

td.button-tip{ padding-left: 160px; height: 27px; /*text-align: center;*/ }
#btn-create-feed {
float: right;
}
#buttons {
line-height: 24px;
}
.button-tip span.description{
    float: center;  
}
#message{ /* position: relative; top: 150px; left: 0px;*/ }
#form-catalog-page .preview-text-catalog { /*display: block;*/ }
#form-catalog-page .preview-text-catalog b{ display: block; width: 150px; float: left; }
#form-catalog-page .preview-text-catalog #keywords{ float: left; margin-right: 5px; width: 640px;   }
.clear{ clear:both; }
/* Catalog page*/
#form-catalog-page .result-tile {
    border-top: 1px solid black;
    float: left;
    /*height: 135px;*/
    overflow: hidden;
    padding: 10px 10px;
    width: 800px;
}
#form-catalog-page .tile-left {
    float: left;
    /*width: 130px;*/
}
#form-catalog-page .tile-right {
    float: right;
    /*height: 155px;*/
    overflow: hidden;
    width: 670px;
}
#form-catalog-page .result-tile .tile-right p.video_summary{
    height: 2em;
    overflow: hidden;
}
#catalog-page .result-tile h2.video_title {
    height: 28px;
}
#form-catalog-page .label-tile {
    float: left;
    height: 25px;
    overflow: hidden;
    padding: 15px 10px;
    width: 400px;
}
#form-catalog-page .label-tile .tile-left {
    float: left;
    width: 120px;
}
#form-catalog-page .label-tile .tile-right {
    float: right;
    height: 45px;
    overflow: hidden;
    width: 280px;
    text-align: right;
}
#form-catalog-page .label-tile .tile-right img{
    vertical-align: middle;
}
#form-catalog-page .label-tile #update-search{
    margin: 0 5px;
}
#update-search[disabled]{
    color: #ccc;
}
#form-catalog-page .label-tile-one-column{
    width: 820px;
    padding: 20px 10px;
}
.datepicker{ width: 58px;}
#form-catalog-page .label-tile .ui-multiselect{ width: 250px !important; }
#form-catalog-page #provider-select{ }
#form-catalog-page .datepicker{ font-size: 11px; margin: 0 5px; width: 63px; }
#form-catalog-page .label-tile-one-column .tooltip{ 
    width: auto !important;
}

/* Catalog: Add new page pop-up*/
#TB_window {
    overflow: hidden;
}
#TB_window #preview-feed a:link, #TB_window #preview-feed a:hover {
    color: #21759B !important;
}
#TB_window .preview-text-catalog #keywords {
    width: 636px;
}
#TB_ajaxContent {
    line-height: 1.3em;
    /*height: 581px !important;*/
}
#TB_ajaxContent p {
    color: #333;
    padding: 0;
}
.results-divider{
    margin: -7px 29px 0 64px;
}

#TB_window .label-tile-one-column .tooltip{ 
    left: 533px !important;
}
#form-create-feed .grabpress-table .ui-multiselect{
    width: 230px !important;
    *width: 244px !important;
}

#TB_window #TB_title{
    z-index: 105 !important;
}
/*-Preview page ------------*/



/*--------------------------*/
#preview-feed #btn-create-feed{
    float: none;
    margin-left: 200px;
}
.grabgear{ 
     bottom: 50%;
    *bottom: -70px;    
    left: 50%;
    width: 68px;
    height: 68px;
    margin-top: -34px;
    margin-left: -34px;
    position: absolute;
    z-index: 16777271;/* lowest maximum z-index supported cross-browser (safari 3 was 24bit) */
    top: 50%;
}

/* Dashboard ------------*/
/* Custom =======================================================*/
#form-dashboard{
    background: #000 url("../images/background.png") repeat;
    margin: 0;
    padding: 0 0 160px 0 !important;
    box-shadow: 0 0 5px 2px rgb(0,0,0) inset;
    height: auto;
    width: 100%;
}

#t #b {
    background: none;
    font: 12px 'Calibri W01 Regular 904604', Verdana;
}

#form-dashboard .panel {
    background: #FFF url( '../images/panel.png' ) repeat;
    margin: 8px;
    padding: 6px;
    box-shadow: 8px 8px 4px rgba(0, 0,0,0.25);
}
#form-dashboard .tab-content{
    background: #FFF url( '../images/inset.png' ) repeat-x left bottom;
    box-shadow: 0 0 5px 2px rgb(0,0,0) inset, 0 1px 0 0 rgba(255, 255,255,0.25);
}
#form-dashboard .faq .tab-content{
    padding: 10px 10px 20px 10px;
}
#t #b .nav .active > a {
    height: 20px;
    color: #FFF;
    padding: 8px 0 0 0;
    font: 12px 'Calibri W01 Regular 904604', Verdana;
    background: none;
    text-indent: 6px;
}
#t #b .accordion{
    background-color: #000;
}
#t #b .accordion-group {
    border: 1px solid #2B2B2B;
}

#t #b a.accordion-toggle{
    background-color: #2B2B2B;
    color: #FFFFFF;
    font: 18px 'Gill Sans W01 Light';
    text-decoration: none;
}
#t #b a.accordion-toggle:hover{
    color: #FF0000;
    -webkit-box-shadow: 0px 0px 5px rgba(255, 0 , 0, 0.75);
    -moz-box-shadow: 0px 0px 5px rgba(255, 0 , 0, 0.75);
    box-shadow: 0px 0px 5px rgba(255, 0 , 0, 0.75);
    border-radius: 3px;
}
#t #b .feed_title{
    overflow: hidden;
    white-space: nowrap;
}
#t #b .accordion-inner {
     padding: 0;
}
#t #b .feeds{
    background: #FFF url( '../images/panel.png' ) repeat;
    box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.25);
    display: inline-block;
    height: 484px !important;
    width: 468px !important;  
    float: right;  
    padding: 6px !important;
    margin: 8px !important;
}
#t #b .feeds a{
    text-decoration: none;
}
#t #b .feeds .panel{
    background: url("../images/inset.png") repeat-x scroll left bottom #FFFFFF;
    -moz-border-radius: 3px; 
    -webkit-border-radius: 3px; 
    border-radius: 3px; 
    margin: 10px 2px 2px 3px;
    padding-left: 0;
    padding-right: 0;
    padding: 0;
    height: 428px;
}
/* ... */

